Update: Improve git-diff and add some alias cmd.

--- a/.gitconfig
+++ b/.gitconfig
@@ -24,3 +24,11 @@
 	f = fetch
 	poo = push origin
 
+[diff]
+	compactionHeuristic = true
+[interactive]
+	diffFilter = diff-highlight
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
