update: gitconfig += fancy

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,13 +18,12 @@
 	cm = commit -m
 	co = checkout
 	# lg = log --decorate --oneline --graph --all
-	lg = log --all --graph --pretty=format:'%C(auto)%h%Creset -%C(auto)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	lg = log --graph --all --pretty=format:'%C(auto)%h%Creset -%C(auto)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	p = pull
 	po = pull origin
 	f = fetch
 	poo = push origin
 	st = status
-
 [diff]
 	compactionHeuristic = true
 [interactive]
@@ -33,3 +32,8 @@
 	log = diff-highlight | less
 	show = diff-highlight | less
 	diff = diff-highlight | less
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
