--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asn1crypto==0.22.0
 astroid==1.5.3
+autopep8==1.3.2
 awscli==1.11.117
 bcrypt==3.1.3
 beautifulsoup4==4.6.0
@@ -13,24 +14,35 @@ chardet==3.0.4
 click==6.7
 colorama==0.3.7
 contextlib2==0.5.5
+coverage==4.4.1
 cryptography==1.9
 Django==1.11.3
 docutils==0.13.1
 Fabric3==1.13.1.post1
 flake8==3.3.0
 Flask==0.12.2
+future==0.16.0
+gevent==1.1.1
 Glances==2.10
+greenlet==0.4.12
 idna==2.5
 isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.9.6
 jmespath==0.9.3
+jrnl==1.9.8
+keyring==10.4.0
 lazy-object-proxy==1.3.1
+locustio==0.7.5
 MarkupSafe==1.0
 mccabe==0.6.1
+msgpack-python==0.4.8
 paramiko==2.2.1
+parsedatetime==2.4
 pep8==1.7.0
+pluggy==0.4.0
 psutil==5.2.2
+py==1.4.34
 pyasn1==0.2.3
 pycodestyle==2.3.1
 pycparser==2.18
@@ -48,7 +60,9 @@ scandir==1.5
 selenium==3.4.3
 six==1.10.0
 speedtest-cli==1.0.6
+tox==2.7.0
 tqdm==4.14.0
+tzlocal==1.4
 urllib3==1.21.1
 virtualenv==15.1.0
 Werkzeug==0.12.2
