Update: Homebrew - Add Multiple CLI Tools

--- a/system/Brewfile
+++ b/system/Brewfile
@@ -1,4 +1,5 @@
 tap "alecthomas/tap"
+tap "cuber/libsecp256k1"
 tap "eddieantonio/eddieantonio"
 tap "eosio/eosio"
 tap "eosio/eosio.cdt"
@@ -12,7 +13,9 @@ tap "homebrew/services"
 tap "jakewmeyer/geo"
 tap "loadimpact/k6"
 tap "minio/stable"
+cask "java8"
 brew "arp-scan"
+brew "autoconf"
 brew "autoenv"
 brew "automake"
 brew "bat"
@@ -21,6 +24,9 @@ brew "boost"
 brew "node"
 brew "bower", link: false
 brew "gettext", link: true
+brew "readline"
+brew "xz"
+brew "python"
 brew "ccat"
 brew "ccze"
 brew "cmake"
@@ -32,28 +38,28 @@ brew "ctop"
 brew "go"
 brew "dep"
 brew "diff-so-fancy"
-brew "readline"
-brew "xz"
-brew "python"
 brew "docker-compose", link: false
 brew "doxygen"
 brew "emojify"
 brew "ethereum"
 brew "exa"
+brew "webp"
+brew "ffmpeg"
 brew "figlet"
 brew "fortune"
 brew "fzf"
-brew "webp"
 brew "ghq"
 brew "git"
 brew "glide"
 brew "gnupg"
+brew "libtool"
 brew "graphviz"
 brew "grv"
 brew "htop"
 brew "httpie"
 brew "hub"
 brew "hugo"
+brew "imageoptim-cli"
 brew "ipfs"
 brew "kubernetes-helm"
 brew "lcov"
@@ -61,6 +67,7 @@ brew "llvm@4"
 brew "lzlib"
 brew "mackup"
 brew "mariadb"
+brew "media-info"
 brew "mongodb"
 brew "mysql-client"
 brew "neofetch"
@@ -69,6 +76,7 @@ brew "nmap"
 brew "openssl@1.1"
 brew "pandoc"
 brew "peco"
+brew "pkg-config"
 brew "poppler"
 brew "postgresql"
 brew "prettyping"
@@ -77,6 +85,7 @@ brew "pyenv"
 brew "pyenv-virtualenv", args: ["HEAD"]
 brew "shellcheck"
 brew "speedtest-cli"
+brew "spotctl"
 brew "swift"
 brew "tig"
 brew "tmux"
@@ -88,6 +97,7 @@ brew "watchman"
 brew "wellington"
 brew "wget"
 brew "yarn"
+brew "youtube-dl"
 brew "zlib"
 brew "zsh"
 brew "zsh-syntax-highlighting"
@@ -101,5 +111,4 @@ brew "loadimpact/k6/k6"
 brew "minio/stable/mc"
 cask "android-platform-tools"
 cask "iina"
-cask "java8"
 cask "keybase"
