--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,7 +5,7 @@
 [user]
 	name = CHANN
 	email = chann@chann.kr
-	signingkey = <SECRET>
+	signingkey = EC9A01F394E0A778
 [core]
 	excludesfile = /Users/chann/.gitignore_global
 	editor = vim
