Update: Git - Signing commit automatically

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -49,3 +49,5 @@
 [mergetool "sourcetree"]
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+[tag]
+	forceSignAnnotated = true
