Update: VS Code

--- a/editor/vscode-config.json
+++ b/editor/vscode-config.json
@@ -1,43 +1,51 @@
 {
   "[go]": {
-    "editor.tabSize": 4,
+    "editor.tabSize": 4
   },
   "[cpp]": {
-    "editor.wordWrap": "on",
+    "editor.wordWrap": "on"
   },
   "[html]": {
-    "editor.wordWrap": "off",
+    "editor.wordWrap": "off"
   },
   "[javascript]": {
     "editor.tabSize": 2,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": true
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[markdown]": {
-    "editor.wordWrap": "bounded",
+    "editor.wordWrap": "off",
     "editor.wordWrapColumn": 100,
     "editor.quickSuggestions": true,
     "editor.tabSize": 2
   },
   "[scss]": {
-    "editor.tabSize": 2,
+    "editor.tabSize": 2
   },
   "[typescript]": {
-    "editor.tabSize": 2,
+    "editor.tabSize": 2
   },
   "[php]": {
-    "editor.wordWrap": "off",
+    "editor.wordWrap": "off"
   },
   "[python]": {
     "editor.wordWrap": "off",
-    "editor.defaultFormatter": "ms-python.python",
+    "editor.formatOnSave": true
   },
   "breadcrumbs.enabled": true,
-  "colorize.languages": [
-    "javascript",
-  ],
+  "colorize.languages": ["javascript"],
+  "C_Cpp.updateChannel": "Insiders",
   "css.lint.unknownProperties": "ignore",
   "debug.internalConsoleOptions": "openOnSessionStart",
+  "files.associations": {
+    "*.html": "html",
+    "**/templates/*.html": "django-html",
+    "**/templates/*": "django-txt",
+    "**/requirements{/**,*}.{txt,in}": "pip-requirements"
+  },
   "editor.fontFamily": "'DejaVu Sans Mono for Powerline', Menlo, Monaco, 'Courier New', monospace",
   "editor.fontSize": 14,
   "editor.formatOnPaste": false,
@@ -47,68 +55,70 @@
   "editor.minimap.showSlider": "always",
   "editor.multiCursorModifier": "alt",
   "editor.renderWhitespace": "all",
-  "editor.rulers": [
-    120
-  ],
+  "editor.rulers": [120],
+  "editor.suggestSelection": "first",
   "editor.wordWrap": "bounded",
   "editor.wordWrapColumn": 120,
+  "emmet.includeLanguages": {
+    "django-html": "html"
+  },
   "emmet.syntaxProfiles": {
     "javascript": "jsx"
   },
+  "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
+  "extensions.ignoreRecommendations": false,
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "git.autofetch": true,
   "git.enableSmartCommit": true,
   "go.autocompleteUnimportedPackages": true,
   "go.formatTool": "gofmt",
-  "go.lintTool": "revive",
+  "go.inferGopath": true,
   "go.lintFlags": [
     "-exclude=vendor/...",
     "-config=${workspaceFolder}/revive.toml"
   ],
-  "go.inferGopath": true,
   "go.lintOnSave": "workspace",
+  "go.lintTool": "revive",
   "html.format.wrapLineLength": 0,
   "html.suggest.html5": true,
-  "javascript.format.enable": false,
+  "javascript.format.enable": true,
   "javascript.implicitProjectConfig.experimentalDecorators": true,
   "javascript.updateImportsOnFileMove.enabled": "always",
   "markdown.preview.scrollEditorWithPreview": true,
-  "prettier.eslintIntegration": true,
-  "prettier.trailingComma": "all",
-  "prettier.semi": true,
+  "python.analysis.disabled": ["inherit-non-class"],
   "python.autoComplete.addBrackets": true,
-  "python.formatting.autopep8Args": [
-    "--max-line-length=200",
-  ],
+  "python.formatting.provider": "autopep8",
+  "python.formatting.blackArgs": ["--max-line-length=120"],
+  "python.formatting.yapfArgs": ["--max-line-length=120"],
+  "python.formatting.autopep8Args": ["--max-line-length=120", "--aggressive"],
+  // "python.jediEnabled": true,
+  "python.linting.enabled": true,
   "python.linting.pylintArgs": [
     "--disable=E1101,C0111,C0103,W0512",
     "--max-line-length=120"
   ],
+  "python.jediEnabled": false,
   "python.pythonPath": "/Users/chann/.pyenv/shims/python",
   "scss.lint.unknownProperties": "ignore",
   "search.smartCase": true,
-  "sync.askGistName": false,
   "sync.autoDownload": false,
   "sync.autoUpload": false,
   "sync.forceDownload": false,
+  "sync.forceUpload": true,
   "sync.gist": "9e874b2009f8fa0537af0db82c3ddecf",
   "sync.quietSync": false,
   "sync.removeExtensions": true,
   "sync.syncExtensions": true,
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
   "window.zoomLevel": 0,
   "workbench.activityBar.visible": true,
+  "workbench.colorTheme": "One Dark Pro",
+  "workbench.editor.enablePreview": false,
+  "workbench.editor.enablePreviewFromQuickOpen": false,
   "workbench.sideBar.location": "left",
   "workbench.startupEditor": "newUntitledFile",
   "workbench.statusBar.visible": true,
-  "workbench.colorTheme": "One Dark Pro Vivid",
-  "editor.suggestSelection": "first",
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "C_Cpp.updateChannel": "Insiders",
-  "extensions.ignoreRecommendations": false,
-  "explorer.confirmDelete": false,
-  "eslint.autoFixOnSave": true,
-  "prettier.printWidth": 120,
-  "python.jediEnabled": false,
+  "eslint.autoFixOnSave": true
 }
