--- a/sh/Brewfile
+++ b/sh/Brewfile
@@ -1,9 +1,12 @@
+tap "eddieantonio/eddieantonio"
+tap "homebrew/bundle"
+brew "xz"
+brew "webp"
 brew "bat"
 brew "boost"
-brew "node"
+brew "caddy"
 brew "readline"
-brew "xz"
-brew "python"
+brew "python@3.13"
 brew "ccat"
 brew "cmake"
 brew "cmatrix"
@@ -11,28 +14,34 @@ brew "cocoapods"
 brew "coreutils"
 brew "cowsay"
 brew "ctop"
-brew "go"
 brew "diff-so-fancy"
-brew "webp"
+brew "direnv"
+brew "duf"
 brew "ffmpeg"
 brew "figlet"
 brew "fortune"
 brew "fzf"
+brew "gh"
 brew "git"
 brew "gnupg"
+brew "go"
 brew "libtool"
 brew "graphviz"
 brew "htop"
 brew "httpie"
 brew "hub"
-brew "mongodb"
+brew "lolcat"
+brew "zlib"
 brew "mysql-client"
 brew "neofetch"
 brew "netcat"
 brew "nmap"
-brew "postgresql"
+brew "node"
+brew "postgresql@14"
 brew "prettyping"
 brew "pstree"
+brew "pyenv"
+brew "rust"
 brew "shellcheck"
 brew "speedtest-cli"
 brew "tig"
@@ -42,9 +51,131 @@ brew "tree"
 brew "wakeonlan"
 brew "wget"
 brew "yarn"
-brew "youtube-dl"
-brew "zlib"
 brew "zsh"
 brew "zsh-syntax-highlighting"
 brew "eddieantonio/eddieantonio/imgcat"
 cask "iina"
+cask "orbstack"
+cask "stats"
+vscode "4ops.terraform"
+vscode "aaron-bond.better-comments"
+vscode "adpyke.codesnap"
+vscode "adpyke.vscode-sql-formatter"
+vscode "amazonwebservices.aws-toolkit-vscode"
+vscode "arcanis.vscode-zipfs"
+vscode "austenc.tailwind-docs"
+vscode "azemoh.one-monokai"
+vscode "bang.antd-snippets"
+vscode "batisteo.vscode-django"
+vscode "bibhasdn.django-snippets"
+vscode "blzjns.vscode-raml"
+vscode "boto3typed.boto3-ide"
+vscode "bradlc.vscode-tailwindcss"
+vscode "ccjr.emotion-auto-css"
+vscode "christian-kohler.npm-intellisense"
+vscode "christian-kohler.path-intellisense"
+vscode "clarkyu.vscode-sql-beautify"
+vscode "compulim.compulim-vscode-closetag"
+vscode "dart-code.dart-code"
+vscode "dart-code.flutter"
+vscode "dbaeumer.vscode-eslint"
+vscode "docsmsft.docs-images"
+vscode "donjayamanne.githistory"
+vscode "donjayamanne.python-environment-manager"
+vscode "donjayamanne.python-extension-pack"
+vscode "dsznajder.es7-react-js-snippets"
+vscode "eamodio.gitlens"
+vscode "editorconfig.editorconfig"
+vscode "ericadamski.carbon-now-sh"
+vscode "eriklynd.json-tools"
+vscode "esbenp.prettier-vscode"
+vscode "expo.vscode-expo-theme"
+vscode "expo.vscode-expo-tools"
+vscode "fabiospampinato.vscode-diff"
+vscode "fabiospampinato.vscode-open-in-browsers"
+vscode "figma.figma-vscode-extension"
+vscode "flesler.url-encode"
+vscode "formulahendry.code-runner"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "github.github-vscode-theme"
+vscode "github.vscode-github-actions"
+vscode "github.vscode-pull-request-github"
+vscode "golang.go"
+vscode "graphql.vscode-graphql"
+vscode "graphql.vscode-graphql-syntax"
+vscode "hashicorp.terraform"
+vscode "hbenl.vscode-test-explorer"
+vscode "hookyqr.minify"
+vscode "idrabenia.solidity-solhint"
+vscode "inferrinizzard.prettier-sql-vscode"
+vscode "jock.svg"
+vscode "juanblanco.solidity"
+vscode "kamikillerto.vscode-colorize"
+vscode "kevinrose.vsc-python-indent"
+vscode "learnwithyan.dedupli"
+vscode "magicstack.magicpython"
+vscode "malo.copy-json-path"
+vscode "marp-team.marp-vscode"
+vscode "mathiasfrohlich.kotlin"
+vscode "matthewpi.caddyfile-support"
+vscode "me-dutour-mathieu.vscode-github-actions"
+vscode "mechatroner.rainbow-csv"
+vscode "mgesbert.python-path"
+vscode "mgmcdermott.vscode-language-babel"
+vscode "mikestead.dotenv"
+vscode "mikoz.autoflake-extension"
+vscode "mitaki28.vscode-clang"
+vscode "mitchdenny.ecdc"
+vscode "mkhl.direnv"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-kubernetes-tools.vscode-kubernetes-tools"
+vscode "ms-ossdata.vscode-postgresql"
+vscode "ms-python.black-formatter"
+vscode "ms-python.debugpy"
+vscode "ms-python.isort"
+vscode "ms-python.pylint"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.test-adapter-converter"
+vscode "ms-vscode.vscode-speech"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "msjsdiag.vscode-react-native"
+vscode "naumovs.color-highlight"
+vscode "njpwerner.autodocstring"
+vscode "oderwat.indent-rainbow"
+vscode "pkief.material-icon-theme"
+vscode "pnp.polacode"
+vscode "raillyhugo.one-hunter"
+vscode "redhat.java"
+vscode "redhat.vscode-yaml"
+vscode "richie5um2.vscode-sort-json"
+vscode "ritwickdey.liveserver"
+vscode "sadeghpm.sql-snippets"
+vscode "shanoor.vscode-nginx"
+vscode "shardulm94.trailing-spaces"
+vscode "swmansion.react-native-ide"
+vscode "tomoki1207.pdf"
+vscode "tomoki1207.selectline-statusbar"
+vscode "tushortz.java-imports-snippets"
+vscode "tyriar.sort-lines"
+vscode "vikas.code-navigation"
+vscode "visualstudioexptteam.intellicode-api-usage-examples"
+vscode "visualstudioexptteam.vscodeintellicode"
+vscode "vscjava.vscode-gradle"
+vscode "vscode-icons-team.vscode-icons"
+vscode "vscodevim.vim"
+vscode "william-voyek.vscode-nginx"
+vscode "xabikos.javascriptsnippets"
+vscode "xabikos.reactsnippets"
+vscode "yzane.markdown-pdf"
+vscode "yzhang.markdown-all-in-one"
+vscode "zhuangtongfa.material-theme"
+vscode "ziyasal.vscode-open-in-github"
