--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -9,7 +9,7 @@
 [core]
 	excludesfile = /Users/chann/.gitignore_global
 	editor = vim
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	pager = delta
 [alias]
 	cm = commit -m
 	co = checkout
@@ -28,7 +28,7 @@
 [diff]
 	compactionHeuristic = true
 [interactive]
-	diffFilter = diff-so-fancy --patch
+	diffFilter = delta --color-only
 [commit]
 	gpgsign = true
 [hub]
@@ -47,3 +47,13 @@
 	old = red bold
 	new = green bold
 	whitespace = red reverse
+[push]
+	autoSetupRemote = true
+[pull]
+	rebase = true
+[delta]
+    navigate = true  # use n and N to move between diff sections
+    dark = true      # or light = true, or omit for auto-detection
+[merge]
+    conflictStyle = zdiff3
+
