update: use lowercase name for git signer name

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,7 +3,7 @@
 	smudge = git lfs smudge %f
 	required = true
 [user]
-	name = CHANN
+	name = chann
 	email = iam@chann.dev
 	signingkey = EC9A01F394E0A778
 [core]
